<resources>
    <string name="app_name">晴天壁纸</string>

    <!-- MainActivity-->
    <string name="hot">热门</string>
    <string name="category">分类</string>
    <string name="press_to_exit">再按一次退出应用</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Navigation-->
    <string name="login">微信登录</string>
    <string name="my_star">我的收藏</string>
    <string name="clear_trash">清除缓存</string>
    <string name="support_qt_wall_paper">支持晴天壁纸</string>
    <string name="logout">注销</string>

    <string name="clear_cache_success">清除缓存成功</string>

    <!-- feedBack-->
    <string name="feedback">意见反馈</string>
    <string name="feed_back_content">反馈内容</string>
    <string name="feed_back_content_hint">你的意见对我们至关重要</string>
    <string name="contact_choice">联系方式&#160;(可选)</string>
    <string name="contact_choice_hint">电话/邮箱/QQ</string>
    <string name="submit">提交</string>
    <string name="please_input_content">请输入反馈内容</string>
    <string name="please_input_contact">请输入联系方式</string>
    <string name="submit_feed_back_success">提交成功</string>

    <!-- Wx-->
    <string name="wx_not_install">请先安装微信</string>
    <string name="wx_authing">微信授权中…</string>
    <string name="wx_login_success">微信登录成功</string>
    <string name="wx_login_fail">微信登录失败</string>
    <string name="wx_log_out_success">注销成功</string>
    
    <!-- AboutActivity-->
    <string name="about_qt_wall_paper">关于晴天壁纸</string>
    <string name="about">关于</string>
    <string name="about_protocol">隐私协议</string>

    <!-- 壁纸-->
    <string name="set_as">设置为</string>
    <string name="set_wallpaper_success">设置壁纸成功</string>
    <string name="set_wallpaper_fail">设置壁纸失败</string>
    <string name="set_wallpaper_need_permission">壁纸需要保存到本地,请允许读取存储卡权限</string>
    <string name="click_to_grant_permission">点击请求获取权限</string>
    <string name="set_wallpaper_grant_permission_fail">获取存储卡权限失败</string>

    <!-- 收藏-->
    <string name="operate_fail">操作失败</string>

    <!-- Support-->
    <string name="no_store">暂无应用商店可评分</string>
    
    <!-- 我的收藏-->
    <string name="no_favourites">暂无收藏</string>
</resources>
