<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_tab" android:checkableBehavior="single">
        <item
            android:id="@+id/hot"
            android:icon="@drawable/selector_menu_hot"
            android:title="@string/hot"/>

        <item
            android:id="@+id/category"
            android:icon="@drawable/selector_menu_category"
            android:title="@string/category"/>
    </group>

    <group android:id="@+id/group_personal" android:checkableBehavior="none">
        <item
            android:id="@+id/my_star"
            android:icon="@drawable/menu_star"
            android:checkable="false"
            android:title="@string/my_star"/>

        <item
            android:id="@+id/clear_cache"
            android:icon="@drawable/menu_trash"
            android:title="@string/clear_trash"/>

        <item
            android:id="@+id/send_feed_back"
            android:icon="@drawable/menu_feedback"
            android:title="@string/feedback"/>

        <item
            android:id="@+id/support"
            android:icon="@drawable/menu_support"
            android:title="@string/support_qt_wall_paper"/>

        <item
            android:id="@+id/about"
            android:icon="@drawable/menu_about"
            android:title="@string/about_qt_wall_paper"/>
    </group>

    <item
        android:id="@+id/log_out"
        android:title="@string/logout"/>

</menu>